# certinator-ai

./: .env.sample  .gitignore  ARCHITECTURE.md  ARCHITECTURE_GAPS.md  LICENSE  Makefile  PROJECT.md  README.md  main.py  package.json  pnpm-lock.yaml  requirements.txt  test_hitl.py
.devcontainer/: devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: general-question.md
.github/agents/: certinatorai-planner.agent.md  expert-nextjs-developer.agent.md  maf-python.agent.md  microsoft-agent-framework-python.agent.md
.github/instructions/: python.instructions.md
.github/prompts/: debugFullStack.prompt.md  initial_implementation.prompt.md  plan-architecture.prompt.md  plan-practice-questions.prompt.md  review-architecture.prompt.md  reviewArchitecture.prompt.md
.github/templates/: plan-template.md
evaluations/: __init__.py  __main__.py  evaluation.py
evaluations/datasets/: adversarial_routing.jsonl  cert_info_golden.jsonl  critic_calibration.jsonl  groundedness.jsonl  quiz_quality.jsonl  routing_queries.jsonl  study_plan_scenarios.jsonl
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
maf/: pyproject.toml
maf/src/: agent.py  main.py
scripts/: run-agent.bat  run-agent.sh  setup-agent.bat  setup-agent.sh
src/: __init__.py  app.py  config.py  health.py  metrics.py  orchestrators.py  rate_limiter.py  safety.py  state_schema.py  thread_store.py  workflow.py
tests/: test_cycle_breaker.py  test_evaluation.py  test_health.py  test_normalize_llm.py  test_rate_limiter.py  test_safety.py  test_schedule_models.py
(+90 files in other folders)
